--- a/TestingLearn/TestingLearn.vcxproj
+++ b/TestingLearn/TestingLearn.vcxproj
@@ -152,21 +152,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="GameObject2D.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PongBall.cpp" />
     <ClCompile Include="PongPaddle.cpp" />
     <ClCompile Include="Runtime.cpp" />
     <ClCompile Include="Time.cpp" />
-    <ClCompile Include="Transform2D.cpp" />
     <ClCompile Include="Velocity2D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameApp.h" />
+    <ClInclude Include="GameObject2D.h" />
     <ClInclude Include="PongBall.h" />
     <ClInclude Include="PongPaddle.h" />
     <ClInclude Include="Runtime.h" />
     <ClInclude Include="Time.h" />
-    <ClInclude Include="Transform2D.h" />
     <ClInclude Include="Velocity2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
