Fix Update v0x - Paddle is working now - Lesson Learned, Recursive Inclusion can make compiler error

--- a/TestingLearn/TestingLearn.vcxproj
+++ b/TestingLearn/TestingLearn.vcxproj
@@ -153,6 +153,8 @@
   <ItemGroup>
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="GameObject2D.cpp" />
+    <ClCompile Include="GameSystem.cpp" />
+    <ClCompile Include="RuntimeContainer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PongBall.cpp" />
     <ClCompile Include="PongPaddle.cpp" />
@@ -163,11 +165,16 @@
   <ItemGroup>
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="GameObject2D.h" />
+    <ClInclude Include="GameSystem.h" />
+    <ClInclude Include="RuntimeContainer.h" />
     <ClInclude Include="PongBall.h" />
     <ClInclude Include="PongPaddle.h" />
     <ClInclude Include="Runtime.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Velocity2D.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="Minecraft.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
