Update v0x - Paddle limit position move. - Solved nullptr when subscribing event, now event is able to be invoked. - UI Rendering system.

--- a/TestingLearn/TestingLearn.vcxproj
+++ b/TestingLearn/TestingLearn.vcxproj
@@ -153,24 +153,30 @@
   <ItemGroup>
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="GameObject2D.cpp" />
+    <ClCompile Include="Score.cpp" />
     <ClCompile Include="Systems\GameSystem.cpp" />
     <ClCompile Include="RuntimeContainer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PongBall.cpp" />
     <ClCompile Include="PongPaddle.cpp" />
     <ClCompile Include="Time.cpp" />
+    <ClCompile Include="UIContainer.cpp" />
     <ClCompile Include="Velocity2D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Events\EventSystem.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="GameObject2D.h" />
+    <ClInclude Include="Interfaces\IContainer.h" />
+    <ClInclude Include="Interfaces\IRenderUI.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="Systems\GameSystem.h" />
     <ClInclude Include="RuntimeContainer.h" />
     <ClInclude Include="PongBall.h" />
     <ClInclude Include="PongPaddle.h" />
     <ClInclude Include="Interfaces\IRuntime.h" />
     <ClInclude Include="Time.h" />
+    <ClInclude Include="UIContainer.h" />
     <ClInclude Include="Velocity2D.h" />
   </ItemGroup>
   <ItemGroup>
